--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tw-roulette",
   "private": false,
-  "version": "1.0.1",
+  "version": "1.0.2",
   "keywords": [
     "roulette",
     "roulette wheel",
@@ -14,7 +14,7 @@
   "author": "Ethan Ogle",
   "type": "module",
   "main": "dist/index.js",
-  "source": "src/index.ts",
+  "module": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "engines": {
     "node": ">=16",
@@ -25,12 +25,12 @@
     "react-dom": ">=17.0.0"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "lint": "tsc -b && eslint .",
+    "release": "pnpm run build && changeset publish"
   },
   "dependencies": {
+    "@changesets/cli": "^2.27.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
@@ -52,6 +52,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
+    "tsup": "^8.3.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
